# TripTailor

./: .gitignore  LICENSE  Makefile  Procfile  README.md  dump.rdb  env_example.txt  pyproject.toml  pyproject_backup.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_LangGraph_experiment.ipynb  02_LangGraph_experiment.ipynb  Agent_DeepLearningAI.ipynb  Essay_DeepLearningAI.ipynb
triptailor/: __init__.py  dataset.py  features.py  logger.py  main.py  plots.py  routes.py
triptailor/etc/: defaults.cfg
triptailor/modeling/: agent.py  data_schemas.py  inference.py  itinerary_example.json  predict.py  prompts.py  train.py
triptailor/modeling/tools/: google_maps_tool.py
triptailor/static/css/: index.css  itinerary.css
triptailor/static/html/: itinerary.html  itinerary_without_jinja.html
triptailor/static/js/: index.js  itinerary.js
triptailor/templates/: index.html  itinerary.html  loading.html
